objects/User_Story_Commit__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Snapshot_Commit__c</fullName>
        <label>Snapshot Commit</label>
        <referenceTo>Git_Org_Commit__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View_in_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
	AND(NOT(ISNULL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c)),	Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c +  Snapshot_Commit__r.Commit_Id__c,
			IF(
				CONTAINS(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
				SUBSTITUTE(Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,Snapshot_Commit__r.Commit_Id__c),
				Snapshot_Commit__r.Git_Backup__r.Git_Repository__r.Commit_Base_URL__c + Snapshot_Commit__r.Commit_Id__c
			)
		),
	&apos;&apos;), 
	Snapshot_Commit__r.Commit_Id__c
)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>User Story Commit</label>
    <nameField>
        <label>US Commit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>